--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,10 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'com.kyleduo.switchbutton:library:2.0.0'
+
+    implementation 'com.github.clans:fab:1.6.4'
+
+    implementation 'com.github.lihangleo2:ShadowLayout:2.1.6'
 }
