--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="top.myhdg.bijou">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:name=".EnhancedApplication"
         android:allowBackup="true"
         android:fullBackupContent="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:targetApi="q">
 
         <meta-data
             android:name="android.notch_support"
@@ -34,9 +41,12 @@
 
         <activity
             android:name=".activity.MainActivity"
-            android:configChanges="uiMode">
+            android:configChanges="uiMode" />
 
-        </activity>
+
+        <activity
+            android:name=".activity.SourceActivity"
+            android:configChanges="uiMode" />
 
     </application>
 
