--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'org.conscrypt:conscrypt-android:2.2.1'
 
-    implementation 'com.google.code.gson:gson:2.8.6'
-
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
@@ -68,4 +66,10 @@ dependencies {
     implementation 'com.github.clans:fab:1.6.4'
 
     implementation 'com.github.lihangleo2:ShadowLayout:2.1.6'
+
+    implementation 'com.github.XuDaojie:QRCode-Android:v0.4.2'
+
+    implementation 'com.github.pinguo-zhouwei:CustomPopwindow:2.1.1'
+
+    implementation 'com.bm.photoview:library:1.4.1'
 }
